--- a/index.html
+++ b/index.html
@@ -25,3 +25,5 @@ title: Home
   </div>
 
 </section>
+
+<hr><a href="https://www.patreon.com/bePatron?u=3775642" data-patreon-widget-type="become-patron-button">Become a Patron!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script><hr>
