--- a/index.html
+++ b/index.html
@@ -26,4 +26,4 @@ title: Home
 
 </section>
 
-<hr><a href="https://www.patreon.com/bePatron?u=3775642" data-patreon-widget-type="become-patron-button">Become a Patron!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script><hr>
+<a href="https://www.patreon.com/bePatron?u=3775642" data-patreon-widget-type="become-patron-button" style="text-align: center;">Become a Patron!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
