hide patreon button since it is outdated.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@ title: Home
 
 </section>
 
-<center>
+<!--<center>
   <a href="https://www.patreon.com/bePatron?u=3775642" data-patreon-widget-type="become-patron-button">Become a Patron!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
-</center>
+</center>-->
